--- a/slides/lab-00-introduction.ipynb
+++ b/slides/lab-00-introduction.ipynb
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ox8U-ggRUP3C",
-        "outputId": "26a8d793-2849-444a-ab33-ca9095355a5c"
+        "outputId": "04d8372f-85ee-4f11-cdfb-5e5b88b5eade"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,14 +126,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "AozF-BXlGOTA"
       },
       "outputs": [],
       "source": [
         "from google.colab import files\n",
-        "# uploaded = files.upload()  # uncomment this line to open the prompt to upload the dataset"
+        "#uploaded = files.upload()  # uncomment this line to open the prompt to upload the dataset"
       ]
     },
     {
@@ -163,15 +163,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xhVXcbjdU_4N",
-        "outputId": "06e47a9c-8e5b-44a7-f3b4-3830a7f360fb"
+        "outputId": "8dc8de4e-b08a-4b69-aa54-469ea1d97f6c"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-09-18 14:50:37--  https://archive.ics.uci.edu/static/public/53/iris.zip\n",
+            "rm: cannot remove 'iris.zip': No such file or directory\n",
+            "--2025-10-15 20:08:05--  https://archive.ics.uci.edu/static/public/53/iris.zip\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -180,7 +181,7 @@
             "\n",
             "iris.zip                [ <=>                ]   3.65K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-09-18 14:50:38 (763 MB/s) - ‘iris.zip’ saved [3738]\n",
+            "2025-10-15 20:08:05 (655 MB/s) - ‘iris.zip’ saved [3738]\n",
             "\n",
             "Archive:  iris.zip\n",
             "  inflating: iris/Index              \n",
@@ -228,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kriJZ4gdV5On",
-        "outputId": "7bc9c3c8-272e-4b2e-b725-37783d3cc7cf"
+        "outputId": "ec28733b-e641-41bc-86d0-f3b39eba3494"
       },
       "execution_count": 8,
       "outputs": [
@@ -250,13 +251,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "AkjpEdlL7J7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb637c5a-2982-4754-f5ff-2d5afbf9517c"
+        "outputId": "ba9fe3b4-9f16-408c-c1df-cfce4c845d8d"
       },
       "outputs": [
         {
@@ -309,13 +310,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "2w3TPSIP7Op7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11af9843-fac7-496b-f618-9a0d2d77b7e6"
+        "outputId": "a23abae0-889b-4b0a-81a9-bdca4648cd8f"
       },
       "outputs": [
         {
@@ -334,12 +335,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ],
       "source": [
         "print('Type of the data:', type(data[0]))\n",
         "data = [float(x) for x in data]\n",
+        "#Crea una nuova lista data, formata dagli elementi ottenuti facendo il cast a float di x,\n",
+        "#dove x è ogni elemento contenuto nella lista originale data\"\n",
         "print('Type of the data:', [type(x) for x in data])\n",
         "data"
       ]
@@ -373,20 +376,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "W4tkbP8yITed"
+        "id": "W4tkbP8yITed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "23a8f652-470c-4cce-fe29-2b7ca8601a01"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lette 151 righe\n",
+            "dataset =  [[5.1, 3.5, 1.4], [4.9, 3.0, 1.4], [4.7, 3.2, 1.3], [4.6, 3.1, 1.5], [5.0, 3.6, 1.4], [5.4, 3.9, 1.7], [4.6, 3.4, 1.4], [5.0, 3.4, 1.5], [4.4, 2.9, 1.4], [4.9, 3.1, 1.5], [5.4, 3.7, 1.5], [4.8, 3.4, 1.6], [4.8, 3.0, 1.4], [4.3, 3.0, 1.1], [5.8, 4.0, 1.2], [5.7, 4.4, 1.5], [5.4, 3.9, 1.3], [5.1, 3.5, 1.4], [5.7, 3.8, 1.7], [5.1, 3.8, 1.5], [5.4, 3.4, 1.7], [5.1, 3.7, 1.5], [4.6, 3.6, 1.0], [5.1, 3.3, 1.7], [4.8, 3.4, 1.9], [5.0, 3.0, 1.6], [5.0, 3.4, 1.6], [5.2, 3.5, 1.5], [5.2, 3.4, 1.4], [4.7, 3.2, 1.6], [4.8, 3.1, 1.6], [5.4, 3.4, 1.5], [5.2, 4.1, 1.5], [5.5, 4.2, 1.4], [4.9, 3.1, 1.5], [5.0, 3.2, 1.2], [5.5, 3.5, 1.3], [4.9, 3.1, 1.5], [4.4, 3.0, 1.3], [5.1, 3.4, 1.5], [5.0, 3.5, 1.3], [4.5, 2.3, 1.3], [4.4, 3.2, 1.3], [5.0, 3.5, 1.6], [5.1, 3.8, 1.9], [4.8, 3.0, 1.4], [5.1, 3.8, 1.6], [4.6, 3.2, 1.4], [5.3, 3.7, 1.5], [5.0, 3.3, 1.4], [7.0, 3.2, 4.7], [6.4, 3.2, 4.5], [6.9, 3.1, 4.9], [5.5, 2.3, 4.0], [6.5, 2.8, 4.6], [5.7, 2.8, 4.5], [6.3, 3.3, 4.7], [4.9, 2.4, 3.3], [6.6, 2.9, 4.6], [5.2, 2.7, 3.9], [5.0, 2.0, 3.5], [5.9, 3.0, 4.2], [6.0, 2.2, 4.0], [6.1, 2.9, 4.7], [5.6, 2.9, 3.6], [6.7, 3.1, 4.4], [5.6, 3.0, 4.5], [5.8, 2.7, 4.1], [6.2, 2.2, 4.5], [5.6, 2.5, 3.9], [5.9, 3.2, 4.8], [6.1, 2.8, 4.0], [6.3, 2.5, 4.9], [6.1, 2.8, 4.7], [6.4, 2.9, 4.3], [6.6, 3.0, 4.4], [6.8, 2.8, 4.8], [6.7, 3.0, 5.0], [6.0, 2.9, 4.5], [5.7, 2.6, 3.5], [5.5, 2.4, 3.8], [5.5, 2.4, 3.7], [5.8, 2.7, 3.9], [6.0, 2.7, 5.1], [5.4, 3.0, 4.5], [6.0, 3.4, 4.5], [6.7, 3.1, 4.7], [6.3, 2.3, 4.4], [5.6, 3.0, 4.1], [5.5, 2.5, 4.0], [5.5, 2.6, 4.4], [6.1, 3.0, 4.6], [5.8, 2.6, 4.0], [5.0, 2.3, 3.3], [5.6, 2.7, 4.2], [5.7, 3.0, 4.2], [5.7, 2.9, 4.2], [6.2, 2.9, 4.3], [5.1, 2.5, 3.0], [5.7, 2.8, 4.1], [6.3, 3.3, 6.0], [5.8, 2.7, 5.1], [7.1, 3.0, 5.9], [6.3, 2.9, 5.6], [6.5, 3.0, 5.8], [7.6, 3.0, 6.6], [4.9, 2.5, 4.5], [7.3, 2.9, 6.3], [6.7, 2.5, 5.8], [7.2, 3.6, 6.1], [6.5, 3.2, 5.1], [6.4, 2.7, 5.3], [6.8, 3.0, 5.5], [5.7, 2.5, 5.0], [5.8, 2.8, 5.1], [6.4, 3.2, 5.3], [6.5, 3.0, 5.5], [7.7, 3.8, 6.7], [7.7, 2.6, 6.9], [6.0, 2.2, 5.0], [6.9, 3.2, 5.7], [5.6, 2.8, 4.9], [7.7, 2.8, 6.7], [6.3, 2.7, 4.9], [6.7, 3.3, 5.7], [7.2, 3.2, 6.0], [6.2, 2.8, 4.8], [6.1, 3.0, 4.9], [6.4, 2.8, 5.6], [7.2, 3.0, 5.8], [7.4, 2.8, 6.1], [7.9, 3.8, 6.4], [6.4, 2.8, 5.6], [6.3, 2.8, 5.1], [6.1, 2.6, 5.6], [7.7, 3.0, 6.1], [6.3, 3.4, 5.6], [6.4, 3.1, 5.5], [6.0, 3.0, 4.8], [6.9, 3.1, 5.4], [6.7, 3.1, 5.6], [6.9, 3.1, 5.1], [5.8, 2.7, 5.1], [6.8, 3.2, 5.9], [6.7, 3.3, 5.7], [6.7, 3.0, 5.2], [6.3, 2.5, 5.0], [6.5, 3.0, 5.2], [6.2, 3.4, 5.4], [5.9, 3.0, 5.1], []]\n",
+            "labels =  ['Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', '']\n"
+          ]
+        }
+      ],
       "source": [
-        "# write the code here"
+        "file_path = '/content/iris/iris.data' #salvo in una variabile il path del file\n",
+        "with open(file_path, 'r') as f: #lo apro in sola lettura\n",
+        "    lines = f.readlines() #salvo in una variabile tutte le righe del file\n",
+        "print('Lette {} righe'.format(len(lines)))\n",
+        "\n",
+        "dataset = []\n",
+        "labels = []\n",
+        "\n",
+        "for line in lines[:]:\n",
+        "\n",
+        "    #rimuovo gli spazi usando il metodo strip\n",
+        "    content = line.strip()\n",
+        "\n",
+        "    #splitto la riga usando il separatore ,\n",
+        "    content = content.split(',')\n",
+        "\n",
+        "    #separo il contenuto della lista da dati e label\n",
+        "    data = content[:-2]\n",
+        "    data = [float(x) for x in data]\n",
+        "    dataset.append(data)\n",
+        "\n",
+        "    label = content[-1]\n",
+        "    labels.append(label)\n",
+        "\n",
+        "print('dataset = ', dataset)\n",
+        "print('labels = ', labels)\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
