--- a/slides/lab-00-introduction.ipynb
+++ b/slides/lab-00-introduction.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gabbosanti/machine-learning/blob/main/slides/lab-00-introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gabbosanti/machine-learning-lab/blob/main/slides/lab-00-introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,8 +93,11 @@
       "cell_type": "code",
       "source": [
         "file_path = '/content/sample_data/california_housing_train.csv'\n",
+        "#with crea un contesto controllato:\n",
+        "#Apri questa risorsa, usala dentro questo blocco, e quando esci chiudila automaticamente.\n",
         "with open(file_path, 'r') as f:\n",
-        "    lines = f.readlines()\n",
+        "    lines = f.readlines() #Lista di stringhe\n",
+        "\n",
         "print('Read {} lines'.format(len(lines)))"
       ],
       "metadata": {
@@ -102,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ox8U-ggRUP3C",
-        "outputId": "04d8372f-85ee-4f11-cdfb-5e5b88b5eade"
+        "outputId": "2a9fb4ae-e8ff-45d0-9592-cef48fb5c2a7"
       },
       "execution_count": 2,
       "outputs": [
@@ -126,14 +129,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "AozF-BXlGOTA"
       },
       "outputs": [],
       "source": [
-        "from google.colab import files\n",
-        "#uploaded = files.upload()  # uncomment this line to open the prompt to upload the dataset"
+        "from google.colab import files #Importa un modulo specifico di collab per la gestione dei file\n",
+        "# uploaded = files.upload()  # uncomment this line to open the prompt to upload the dataset"
       ]
     },
     {
@@ -163,16 +166,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xhVXcbjdU_4N",
-        "outputId": "8dc8de4e-b08a-4b69-aa54-469ea1d97f6c"
+        "outputId": "c3730e75-1c47-42d5-b057-3573975dcb06"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "rm: cannot remove 'iris.zip': No such file or directory\n",
-            "--2025-10-15 20:08:05--  https://archive.ics.uci.edu/static/public/53/iris.zip\n",
+            "--2025-12-17 14:34:57--  https://archive.ics.uci.edu/static/public/53/iris.zip\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -181,7 +184,7 @@
             "\n",
             "iris.zip                [ <=>                ]   3.65K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-10-15 20:08:05 (655 MB/s) - ‘iris.zip’ saved [3738]\n",
+            "2025-12-17 14:34:58 (401 MB/s) - ‘iris.zip’ saved [3738]\n",
             "\n",
             "Archive:  iris.zip\n",
             "  inflating: iris/Index              \n",
@@ -222,14 +225,14 @@
     {
       "cell_type": "code",
       "source": [
-        "lines[:5]"
+        "lines[:5] #print the first five lines"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kriJZ4gdV5On",
-        "outputId": "ec28733b-e641-41bc-86d0-f3b39eba3494"
+        "outputId": "023f7113-f38f-4bec-aa81-fa44486b7403"
       },
       "execution_count": 8,
       "outputs": [
@@ -257,7 +260,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba9fe3b4-9f16-408c-c1df-cfce4c845d8d"
+        "outputId": "6ae18240-21a0-44ad-d4f0-f2a6a3a6f8c3"
       },
       "outputs": [
         {
@@ -268,13 +271,13 @@
             "\n",
             "Content after strip: 5.1,3.5,1.4,0.2,Iris-setosa\n",
             "Content after split: ['5.1', '3.5', '1.4', '0.2', 'Iris-setosa']\n",
-            "Data: ['5.1', '3.5', '1.4'] Label: Iris-setosa\n",
+            "Data: ['5.1', '3.5', '1.4', '0.2'] Label: Iris-setosa\n",
             "---\n",
             "Raw content: 4.9,3.0,1.4,0.2,Iris-setosa\n",
             "\n",
             "Content after strip: 4.9,3.0,1.4,0.2,Iris-setosa\n",
             "Content after split: ['4.9', '3.0', '1.4', '0.2', 'Iris-setosa']\n",
-            "Data: ['4.9', '3.0', '1.4'] Label: Iris-setosa\n",
+            "Data: ['4.9', '3.0', '1.4', '0.2'] Label: Iris-setosa\n",
             "---\n"
           ]
         }
@@ -287,8 +290,8 @@
         "    content = content.split(',')\n",
         "    print(\"Content after split:\", content)\n",
         "    # now the content is a list with the splitted elements\n",
-        "    data = content[:-2]   # the image name is in the first position\n",
-        "    label = content[-1] # coordinates in the following part\n",
+        "    data = content[:-1] # except for the last item, the others are data\n",
+        "    label = content[-1] # last item is the class we want to predict\n",
         "    # print the content\n",
         "    print('Data:', data, 'Label:', label)\n",
         "    print('---')"
@@ -310,40 +313,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "2w3TPSIP7Op7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a23abae0-889b-4b0a-81a9-bdca4648cd8f"
+        "outputId": "7c583195-1369-43be-a284-c6c873d80c3e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Type of the data: <class 'str'>\n",
-            "Type of the data: [<class 'float'>, <class 'float'>, <class 'float'>]\n"
+            "Type of the data: <class 'float'>\n",
+            "Type of the data: [<class 'float'>, <class 'float'>, <class 'float'>, <class 'float'>]\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[4.9, 3.0, 1.4]"
+              "[4.9, 3.0, 1.4, 0.2]"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ],
       "source": [
-        "print('Type of the data:', type(data[0]))\n",
-        "data = [float(x) for x in data]\n",
-        "#Crea una nuova lista data, formata dagli elementi ottenuti facendo il cast a float di x,\n",
-        "#dove x è ogni elemento contenuto nella lista originale data\"\n",
-        "print('Type of the data:', [type(x) for x in data])\n",
+        "print('Type of the data:', type(data[0])) #Gli elementi della lista sono stringhe\n",
+        "data = [float(x) for x in data] #Faccio il casting a float di tutte le stringhe\n",
+        "print('Type of the data:', [type(x) for x in data]) #Adesso sono diventati float\n",
         "data"
       ]
     },
@@ -376,34 +377,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 18,
       "metadata": {
         "id": "W4tkbP8yITed",
+        "outputId": "a7474f23-5e54-41f6-bd08-6995b1d253a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "23a8f652-470c-4cce-fe29-2b7ca8601a01"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Lette 151 righe\n",
-            "dataset =  [[5.1, 3.5, 1.4], [4.9, 3.0, 1.4], [4.7, 3.2, 1.3], [4.6, 3.1, 1.5], [5.0, 3.6, 1.4], [5.4, 3.9, 1.7], [4.6, 3.4, 1.4], [5.0, 3.4, 1.5], [4.4, 2.9, 1.4], [4.9, 3.1, 1.5], [5.4, 3.7, 1.5], [4.8, 3.4, 1.6], [4.8, 3.0, 1.4], [4.3, 3.0, 1.1], [5.8, 4.0, 1.2], [5.7, 4.4, 1.5], [5.4, 3.9, 1.3], [5.1, 3.5, 1.4], [5.7, 3.8, 1.7], [5.1, 3.8, 1.5], [5.4, 3.4, 1.7], [5.1, 3.7, 1.5], [4.6, 3.6, 1.0], [5.1, 3.3, 1.7], [4.8, 3.4, 1.9], [5.0, 3.0, 1.6], [5.0, 3.4, 1.6], [5.2, 3.5, 1.5], [5.2, 3.4, 1.4], [4.7, 3.2, 1.6], [4.8, 3.1, 1.6], [5.4, 3.4, 1.5], [5.2, 4.1, 1.5], [5.5, 4.2, 1.4], [4.9, 3.1, 1.5], [5.0, 3.2, 1.2], [5.5, 3.5, 1.3], [4.9, 3.1, 1.5], [4.4, 3.0, 1.3], [5.1, 3.4, 1.5], [5.0, 3.5, 1.3], [4.5, 2.3, 1.3], [4.4, 3.2, 1.3], [5.0, 3.5, 1.6], [5.1, 3.8, 1.9], [4.8, 3.0, 1.4], [5.1, 3.8, 1.6], [4.6, 3.2, 1.4], [5.3, 3.7, 1.5], [5.0, 3.3, 1.4], [7.0, 3.2, 4.7], [6.4, 3.2, 4.5], [6.9, 3.1, 4.9], [5.5, 2.3, 4.0], [6.5, 2.8, 4.6], [5.7, 2.8, 4.5], [6.3, 3.3, 4.7], [4.9, 2.4, 3.3], [6.6, 2.9, 4.6], [5.2, 2.7, 3.9], [5.0, 2.0, 3.5], [5.9, 3.0, 4.2], [6.0, 2.2, 4.0], [6.1, 2.9, 4.7], [5.6, 2.9, 3.6], [6.7, 3.1, 4.4], [5.6, 3.0, 4.5], [5.8, 2.7, 4.1], [6.2, 2.2, 4.5], [5.6, 2.5, 3.9], [5.9, 3.2, 4.8], [6.1, 2.8, 4.0], [6.3, 2.5, 4.9], [6.1, 2.8, 4.7], [6.4, 2.9, 4.3], [6.6, 3.0, 4.4], [6.8, 2.8, 4.8], [6.7, 3.0, 5.0], [6.0, 2.9, 4.5], [5.7, 2.6, 3.5], [5.5, 2.4, 3.8], [5.5, 2.4, 3.7], [5.8, 2.7, 3.9], [6.0, 2.7, 5.1], [5.4, 3.0, 4.5], [6.0, 3.4, 4.5], [6.7, 3.1, 4.7], [6.3, 2.3, 4.4], [5.6, 3.0, 4.1], [5.5, 2.5, 4.0], [5.5, 2.6, 4.4], [6.1, 3.0, 4.6], [5.8, 2.6, 4.0], [5.0, 2.3, 3.3], [5.6, 2.7, 4.2], [5.7, 3.0, 4.2], [5.7, 2.9, 4.2], [6.2, 2.9, 4.3], [5.1, 2.5, 3.0], [5.7, 2.8, 4.1], [6.3, 3.3, 6.0], [5.8, 2.7, 5.1], [7.1, 3.0, 5.9], [6.3, 2.9, 5.6], [6.5, 3.0, 5.8], [7.6, 3.0, 6.6], [4.9, 2.5, 4.5], [7.3, 2.9, 6.3], [6.7, 2.5, 5.8], [7.2, 3.6, 6.1], [6.5, 3.2, 5.1], [6.4, 2.7, 5.3], [6.8, 3.0, 5.5], [5.7, 2.5, 5.0], [5.8, 2.8, 5.1], [6.4, 3.2, 5.3], [6.5, 3.0, 5.5], [7.7, 3.8, 6.7], [7.7, 2.6, 6.9], [6.0, 2.2, 5.0], [6.9, 3.2, 5.7], [5.6, 2.8, 4.9], [7.7, 2.8, 6.7], [6.3, 2.7, 4.9], [6.7, 3.3, 5.7], [7.2, 3.2, 6.0], [6.2, 2.8, 4.8], [6.1, 3.0, 4.9], [6.4, 2.8, 5.6], [7.2, 3.0, 5.8], [7.4, 2.8, 6.1], [7.9, 3.8, 6.4], [6.4, 2.8, 5.6], [6.3, 2.8, 5.1], [6.1, 2.6, 5.6], [7.7, 3.0, 6.1], [6.3, 3.4, 5.6], [6.4, 3.1, 5.5], [6.0, 3.0, 4.8], [6.9, 3.1, 5.4], [6.7, 3.1, 5.6], [6.9, 3.1, 5.1], [5.8, 2.7, 5.1], [6.8, 3.2, 5.9], [6.7, 3.3, 5.7], [6.7, 3.0, 5.2], [6.3, 2.5, 5.0], [6.5, 3.0, 5.2], [6.2, 3.4, 5.4], [5.9, 3.0, 5.1], []]\n",
+            "dataset =  [[5.1, 3.5, 1.4, 0.2], [4.9, 3.0, 1.4, 0.2], [4.7, 3.2, 1.3, 0.2], [4.6, 3.1, 1.5, 0.2], [5.0, 3.6, 1.4, 0.2], [5.4, 3.9, 1.7, 0.4], [4.6, 3.4, 1.4, 0.3], [5.0, 3.4, 1.5, 0.2], [4.4, 2.9, 1.4, 0.2], [4.9, 3.1, 1.5, 0.1], [5.4, 3.7, 1.5, 0.2], [4.8, 3.4, 1.6, 0.2], [4.8, 3.0, 1.4, 0.1], [4.3, 3.0, 1.1, 0.1], [5.8, 4.0, 1.2, 0.2], [5.7, 4.4, 1.5, 0.4], [5.4, 3.9, 1.3, 0.4], [5.1, 3.5, 1.4, 0.3], [5.7, 3.8, 1.7, 0.3], [5.1, 3.8, 1.5, 0.3], [5.4, 3.4, 1.7, 0.2], [5.1, 3.7, 1.5, 0.4], [4.6, 3.6, 1.0, 0.2], [5.1, 3.3, 1.7, 0.5], [4.8, 3.4, 1.9, 0.2], [5.0, 3.0, 1.6, 0.2], [5.0, 3.4, 1.6, 0.4], [5.2, 3.5, 1.5, 0.2], [5.2, 3.4, 1.4, 0.2], [4.7, 3.2, 1.6, 0.2], [4.8, 3.1, 1.6, 0.2], [5.4, 3.4, 1.5, 0.4], [5.2, 4.1, 1.5, 0.1], [5.5, 4.2, 1.4, 0.2], [4.9, 3.1, 1.5, 0.1], [5.0, 3.2, 1.2, 0.2], [5.5, 3.5, 1.3, 0.2], [4.9, 3.1, 1.5, 0.1], [4.4, 3.0, 1.3, 0.2], [5.1, 3.4, 1.5, 0.2], [5.0, 3.5, 1.3, 0.3], [4.5, 2.3, 1.3, 0.3], [4.4, 3.2, 1.3, 0.2], [5.0, 3.5, 1.6, 0.6], [5.1, 3.8, 1.9, 0.4], [4.8, 3.0, 1.4, 0.3], [5.1, 3.8, 1.6, 0.2], [4.6, 3.2, 1.4, 0.2], [5.3, 3.7, 1.5, 0.2], [5.0, 3.3, 1.4, 0.2], [7.0, 3.2, 4.7, 1.4], [6.4, 3.2, 4.5, 1.5], [6.9, 3.1, 4.9, 1.5], [5.5, 2.3, 4.0, 1.3], [6.5, 2.8, 4.6, 1.5], [5.7, 2.8, 4.5, 1.3], [6.3, 3.3, 4.7, 1.6], [4.9, 2.4, 3.3, 1.0], [6.6, 2.9, 4.6, 1.3], [5.2, 2.7, 3.9, 1.4], [5.0, 2.0, 3.5, 1.0], [5.9, 3.0, 4.2, 1.5], [6.0, 2.2, 4.0, 1.0], [6.1, 2.9, 4.7, 1.4], [5.6, 2.9, 3.6, 1.3], [6.7, 3.1, 4.4, 1.4], [5.6, 3.0, 4.5, 1.5], [5.8, 2.7, 4.1, 1.0], [6.2, 2.2, 4.5, 1.5], [5.6, 2.5, 3.9, 1.1], [5.9, 3.2, 4.8, 1.8], [6.1, 2.8, 4.0, 1.3], [6.3, 2.5, 4.9, 1.5], [6.1, 2.8, 4.7, 1.2], [6.4, 2.9, 4.3, 1.3], [6.6, 3.0, 4.4, 1.4], [6.8, 2.8, 4.8, 1.4], [6.7, 3.0, 5.0, 1.7], [6.0, 2.9, 4.5, 1.5], [5.7, 2.6, 3.5, 1.0], [5.5, 2.4, 3.8, 1.1], [5.5, 2.4, 3.7, 1.0], [5.8, 2.7, 3.9, 1.2], [6.0, 2.7, 5.1, 1.6], [5.4, 3.0, 4.5, 1.5], [6.0, 3.4, 4.5, 1.6], [6.7, 3.1, 4.7, 1.5], [6.3, 2.3, 4.4, 1.3], [5.6, 3.0, 4.1, 1.3], [5.5, 2.5, 4.0, 1.3], [5.5, 2.6, 4.4, 1.2], [6.1, 3.0, 4.6, 1.4], [5.8, 2.6, 4.0, 1.2], [5.0, 2.3, 3.3, 1.0], [5.6, 2.7, 4.2, 1.3], [5.7, 3.0, 4.2, 1.2], [5.7, 2.9, 4.2, 1.3], [6.2, 2.9, 4.3, 1.3], [5.1, 2.5, 3.0, 1.1], [5.7, 2.8, 4.1, 1.3], [6.3, 3.3, 6.0, 2.5], [5.8, 2.7, 5.1, 1.9], [7.1, 3.0, 5.9, 2.1], [6.3, 2.9, 5.6, 1.8], [6.5, 3.0, 5.8, 2.2], [7.6, 3.0, 6.6, 2.1], [4.9, 2.5, 4.5, 1.7], [7.3, 2.9, 6.3, 1.8], [6.7, 2.5, 5.8, 1.8], [7.2, 3.6, 6.1, 2.5], [6.5, 3.2, 5.1, 2.0], [6.4, 2.7, 5.3, 1.9], [6.8, 3.0, 5.5, 2.1], [5.7, 2.5, 5.0, 2.0], [5.8, 2.8, 5.1, 2.4], [6.4, 3.2, 5.3, 2.3], [6.5, 3.0, 5.5, 1.8], [7.7, 3.8, 6.7, 2.2], [7.7, 2.6, 6.9, 2.3], [6.0, 2.2, 5.0, 1.5], [6.9, 3.2, 5.7, 2.3], [5.6, 2.8, 4.9, 2.0], [7.7, 2.8, 6.7, 2.0], [6.3, 2.7, 4.9, 1.8], [6.7, 3.3, 5.7, 2.1], [7.2, 3.2, 6.0, 1.8], [6.2, 2.8, 4.8, 1.8], [6.1, 3.0, 4.9, 1.8], [6.4, 2.8, 5.6, 2.1], [7.2, 3.0, 5.8, 1.6], [7.4, 2.8, 6.1, 1.9], [7.9, 3.8, 6.4, 2.0], [6.4, 2.8, 5.6, 2.2], [6.3, 2.8, 5.1, 1.5], [6.1, 2.6, 5.6, 1.4], [7.7, 3.0, 6.1, 2.3], [6.3, 3.4, 5.6, 2.4], [6.4, 3.1, 5.5, 1.8], [6.0, 3.0, 4.8, 1.8], [6.9, 3.1, 5.4, 2.1], [6.7, 3.1, 5.6, 2.4], [6.9, 3.1, 5.1, 2.3], [5.8, 2.7, 5.1, 1.9], [6.8, 3.2, 5.9, 2.3], [6.7, 3.3, 5.7, 2.5], [6.7, 3.0, 5.2, 2.3], [6.3, 2.5, 5.0, 1.9], [6.5, 3.0, 5.2, 2.0], [6.2, 3.4, 5.4, 2.3], [5.9, 3.0, 5.1, 1.8], []]\n",
             "labels =  ['Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', 'Iris-virginica', '']\n"
           ]
         }
       ],
       "source": [
-        "file_path = '/content/iris/iris.data' #salvo in una variabile il path del file\n",
-        "with open(file_path, 'r') as f: #lo apro in sola lettura\n",
-        "    lines = f.readlines() #salvo in una variabile tutte le righe del file\n",
-        "print('Lette {} righe'.format(len(lines)))\n",
-        "\n",
-        "dataset = []\n",
-        "labels = []\n",
+        "data_list = []\n",
+        "labels_list = []\n",
         "\n",
         "for line in lines[:]:\n",
         "\n",
@@ -414,15 +408,15 @@
         "    content = content.split(',')\n",
         "\n",
         "    #separo il contenuto della lista da dati e label\n",
-        "    data = content[:-2]\n",
+        "    data = content[:-1]\n",
         "    data = [float(x) for x in data]\n",
-        "    dataset.append(data)\n",
+        "    data_list.append(data)\n",
         "\n",
         "    label = content[-1]\n",
-        "    labels.append(label)\n",
+        "    labels_list.append(label)\n",
         "\n",
-        "print('dataset = ', dataset)\n",
-        "print('labels = ', labels)\n"
+        "print('dataset = ', data_list)\n",
+        "print('labels = ', labels_list)"
       ]
     }
   ],
